syntax = "proto3";

package proto;

option go_package = "github.com/Sadman007/simplewal/proto";

message WAL_Entry {
    uint64 logSeqNumber = 1;
    bytes data = 2;
    uint32 CRC = 3;
    // Optional field for checkpoint.
    optional bool isCheckpoint = 4;
}